# openclexample

./: CMakeLists.txt  Main.c  README.md
